update work experience section

--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
 
               <h4> <a href = "https://github.com/aminul7506/Flashlight" target="_blank" rel="noopener">Github Code</a></span></h4>
 
-              <h4>Get it on <a href = "https://www.amazon.com/Sojal-Flashlight/dp/B01DK9GVLE/ref=sr_1_5?dchild=1&qid=1602765618&refinements=
+              <h4><a href = "https://www.amazon.com/Sojal-Flashlight/dp/B01DK9GVLE/ref=sr_1_5?dchild=1&qid=1602765618&refinements=
             p_4%3ASojal&s=mobile-apps&sr=1-5" target="_blank" rel="noopener">Flashlight</a> on Amazon App Store</h4>
 
               <br>
