--- a/index.html
+++ b/index.html
@@ -455,12 +455,13 @@
             <p>AIST Demo project is a web based application for demonstrating real life application of
               <a href = "https://arxiv.org/abs/2012.08713" target="_blank" rel="noopener">AIST</a>
               (An Interpretable Attention-based Deep Learning Model for Crime Prediction) paper(preprint). The website shows predicted crimes info and some
-              indexes of crime dynamics predicted by AIST model in a given location. Besides, predicted and actual crime data analysis is shown in the website.
+              indexes of crime dynamics predicted by AIST model in a given location. Besides, predicted and actual crime data analysis is shown based on different
+              criteria.
             </p>
 
             <ul>
               <li>Worked in developing backend, rest api and frontend of the application</li>
-              <li>Worked in developing an admin panel for uploading crime data in server</li>
+              <li>Worked in developing an admin panel for uploading crime data on which AIST model will run in server</li>
             </ul>
 
             <strong>Tools & Languages I have used : </strong> Django, Python, SQLite, HTML, CSS, Javascript, jQuery, REST API, tkinter
