--- a/index.html
+++ b/index.html
@@ -367,18 +367,18 @@
             <h4><a href = "https://play.google.com/store/apps/details?id=ridmik.one" target="_blank" rel="noopener">Ridmik+</a> on Google Play</h4>
 
             <br>
-            <h4>Bangla Article Summarizer</h4>
+            <h4>Bangla Article Summarizer(Research Project)</h4>
 
-            <p>Bangla Article Summarizer is a research project which gives the extractive summary of a Bangla news article.</p>
+            <p>Bangla Article Summarizer is a research project which gives the extractive summary of Bangla news articles.</p>
 
             <ul>
               <li>Performed research on making a Bangla article summarizer for a Bangla news article</li>
               <li>Worked for developing Bangla article summarizer after research which was based on
-                TF-IDF(Term Frequency and Inverse Document Frequency), our prepared Bangla word dataset with POS(Parts of Speech) tagger,
+                TF-IDF(Term Frequency and Inverse Document Frequency), our prepared Bangla words dataset with POS(Parts of Speech) tagger,
                 K-means clustering algorithm and NLTK(Natural Language Toolkit) in python</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong>Python, NLTK, Clustering Algorithm, Bangla word dataset
+            <strong>Tools & Languages I have used : </strong>Python, NLTK, Clustering Algorithm, Bangla words dataset
 
             <br><br>
 
@@ -390,7 +390,7 @@
             <ul>
               <li>Worked in the complete development lifecycle of the application with successful launching, developed most of the functionalities
                 of the app</li>
-              <li>Performed research for the security(standard encryption and decryption) of how book will be stored in a user's android device and
+              <li>Performed research for the security(standard encryption and decryption) of how books will be stored in a user's android device and
                 decrypted in the device</li>
               <li>Working as one of a programming advisors for the continuous development of the application</li>
             </ul>
@@ -409,7 +409,7 @@
             <ul>
               <li>Worked for the whole development of this project from its initial development to successful launching and
                 developed all the functionalities of the app</li>
-              <li>Performed research for the security(standard encryption and decryption) of how book will be stored in a user's iOS device and
+              <li>Performed research for the security(standard encryption and decryption) of how books will be stored in a user's iOS device and
                 decrypted in the device using iOS keychain</li>
             </ul>
 
@@ -421,9 +421,9 @@
 
             <br>
 
-            <h4>Ridmik Keyboard Android</h4>
+            <h4>Ridmik Keyboard</h4>
 
-            <p>Ridmik Keyboard is the most popular keyboard in Bangladesh with Bangla phonetic keyboard which has around 50 million users.</p>
+            <p>Ridmik Keyboard is the most popular android keyboard in Bangladesh with Bangla phonetic keyboard which has around 50 million users.</p>
 
             <ul>
               <li>Worked on fixing some bugs, design changes, and implementing some new features in Ridmik Keyboard</li>
@@ -444,7 +444,7 @@
               <li>Worked for developing Ridmik Account Kit Library for both android and iOS application</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong>Android Studio, Java, XML, Xcode, Swift, StoryBoard, Keychain
+            <strong>Tools & Languages I have used : </strong>Android Studio, Java, XML, Xcode, Swift, StoryBoard, iOS Keychain
 
             <br><br><br>
             <h3>Programmer</h3>
