--- a/index.html
+++ b/index.html
@@ -245,6 +245,8 @@
         <ul class="ul-interests">
           <li>Software Engineering</li>
 
+          <li>Machine Learning</li>
+
           <li>Natural Language Processing</li>
 
           <li>Computer Vision</li>
