--- a/index.html
+++ b/index.html
@@ -498,14 +498,14 @@
 
             <h2>Academic Projects : </h2>
 
-              <h3>Android Stay Safe Application</h3>
+              <h3>Stay Safe(Android Application)</h3>
 
-              <h4>Tools : Android Studio, Java, Firebase, Google Map API, SQL, Push Notification</h4>
+              <h4>Tools : Android Studio, Java, Firebase, Google Map API, SQLite, Push Notification</h4>
 
-              <p>It is an android application which is based on the idea of smart city, crime reporting, crime alert and human security. There are
-                two sides in the app: one is admin side and another one is user side.
+              <p>It is an android application which is based on the idea of smart city and human security. There are
+                two sides in the application: one is admin or police side and another one is user side.
 
-              <h4>User side functionality</h4>
+              <h4>User side functionalities</h4>
               <ul>
                 <li>User can report a crime from the app to one's nearby police station</li>
                 <li>User can see the verified crimes in an area</li>
@@ -517,58 +517,53 @@
               </ul>
 
 
-              <h4>Admin or police side functionality</h4>
+              <h4>Admin or police side functionalities</h4>
               <ul>
                 <li>Police can log into his/her station.</li>
-                <li>Police can see the reported crimes in his area and can verify it</li>
-                <li>Police can call or send message to a user who has reported a crime</li>
+                <li>Police can see the reported crimes in his area</li>
+                <li>Police can call or send message to a user who has reported a crime and verify the crime</li>
                 <li>Police can see crimes statistics in his/her area</li>
                 <li>Police can set a area as crime or danger prone</li>
               </ul>
 
-              <h4><a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Github Code and More Details</a></h4>
+              <h4><a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Code</a></h4>
 
               <br>
 
               <h3>Multivariate Stock Price Prediction</h3>
 
-              <h4>Tools : Python, Keras API, Tensorflow backend</h4>
+              <h4>Tools : Python, Keras, Tensorflow, LSTM(Long Short Term Memory), one year share market data for training</h4>
 
-              <p>This is a multi-variate stock price prediction project.
-                I have used keras api and tensorflow as backend.
-                It can predict the starting price of next day share market based on its previous data. I have
-                used one year data from share market and made a model to learn using LSTM(Long Short Term Memory). I have used multiple
-                attribute to predict next day share market opening price.</p>
+              <p>It can predict the starting price for next day share market from a model which is trained using
+                      LSTM on multiple attributes of share market data.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Multivariate-Stock-Price-Prediction" target="_blank" rel="noopener">Github Code</a></h4>
+              <h4> <a href = "https://github.com/aminul7506/Multivariate-Stock-Price-Prediction" target="_blank" rel="noopener">Code</a></h4>
 
               <br>
 
               <h3>Online Examination Web</h3>
 
-              <h4>Tools : Java, JSP Servlet, Oracle</h4>
+              <h4>Tools : Java, JSP Servlet, Oracle, HTML, CSS</h4>
 
-              <p>This is a web based online examination project using Java as frontend and oracle as backend. There are two
-                types of examination. Practice examination and final examination. In practice examination student can give exam at any time but on final
-                examination student can give exam exactly on exam time. There is an admin panel where teacher can upload questions,
-                check students' scripts and can evaluate answer scripts. Student can answer
-                both MCQ and descriptive type question and teacher can give marks to this and evaluation will be done automatically.
-                This project is of great use for schools and colleges to remove burden of manual checking of answers and results.</p>
+              <p>
+                It is a web application from which students can give online exams on both MCQ
+                and descriptive type questions. There is an admin panel from where teachers can upload questions.
+                Teachers can evaluate answer scripts on descriptive type questions and MCQ type questions will be evaluated automatically.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Online-Examination-Web-Based-" target="_blank" rel="noopener">Github Code</a></h4>
+              <h4> <a href = "https://github.com/aminul7506/Online-Examination-Web-Based-" target="_blank" rel="noopener">Code</a></h4>
 
               <br>
 
 
               <h3>Online Examination Desktop</h3>
 
-              <h4>Tools : Java, JavaFx, Socket Programming, Files</h4>
+              <h4>Tools : Java, JavaFx, Socket Programming, File System</h4>
 
-              <p>This is an online examination project using java socket programming and JavaFx framework. Teachers can upload question paper from admin panel
-                for his subject. Students can give MCQ exam on question uploaded by teachers and can see their marks and all previous history on every subject.
+              <p>This is an online examination project using java socket programming and JavaFx framework. Teachers can upload question paper from admin panel.
+                Students can give MCQ exam on questions uploaded by teachers and can see their marks and all previous history on every subject.
               </p>
 
-              <h4> <a href = "https://github.com/aminul7506/Online-Examination-Desktop-" target="_blank" rel="noopener">Github Code</a></h4>
+              <h4> <a href = "https://github.com/aminul7506/Online-Examination-Desktop-" target="_blank" rel="noopener">Code</a></h4>
 
               <br>
 
@@ -576,10 +571,10 @@
 
               <h4>Tools : iGraphics, C</h4>
 
-              <p>It is a funny air fighter game. There are multiple levels in this game and leader boards from where
+              <p>It is a funny air fighter game. There are multiple levels in this game and also leaderboard from where
                 user can see high scores of his own and others.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Air-Fighter" target="_blank" rel="noopener">Github Code</a></h4>
+              <h4> <a href = "https://github.com/aminul7506/Air-Fighter" target="_blank" rel="noopener">Code</a></h4>
 
               <br>
 
@@ -589,7 +584,7 @@
 
               <p>It is a small scale C compiler project. It has four steps : symbol table, lexical analysis, parsing and code generation.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Small-C-Compiler" target="_blank" rel="noopener">Github Code</a></h4>
+              <h4> <a href = "https://github.com/aminul7506/Small-C-Compiler" target="_blank" rel="noopener">Code</a></h4>
 
               <br>
 
@@ -597,9 +592,9 @@
 
               <h4>Tools : OpenGL</h4>
 
-              <p>It was a computer graphics course assignment on which I have generated a realistic image using OpenGL.</p>
+              <p>It is a computer graphics course assignment on which I have generated a realistic image using OpenGL.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/RayTracing" target="_blank" rel="noopener">Github Code</a></h4>
+              <h4> <a href = "https://github.com/aminul7506/RayTracing" target="_blank" rel="noopener">Code</a></h4>
 
               <br>
 
@@ -607,7 +602,7 @@
 
               <h4>Tools : Android Studio, Bluetooth module, Java</h4>
 
-              <p>A quad copter controller using bluetooth module that can control the movement of a small quad copter.</p>
+              <p>It is a quad copter controller using bluetooth module that can control the movement of a small quad copter using android device.</p>
 
               <br>
 
@@ -615,9 +610,9 @@
 
               <h4>Tools : Arduino, Piezoelectric sensor, C</h4>
 
-              <p>It is a hardware project which can be calibrated according to user choice. User can set a time for alarm, and if user does not go out of the mat on the time of alarm,
-                alarm won't stop. This will be helpful for those who accidentally shut off alarm during sleep. For the patient who needs to sleep in one particular side, user can calibrate the
-                mat according to that, and if the user moves aside from that particular side, alarm will go on so that user can move to one's desired position again.</p>
+              <p>It is a hardware project which can be calibrated according to user choice. User can set a time for alarm, and until an user goes out of the mat on the time of alarm,
+                alarm won't stop. This will be helpful for those who accidentally close alarm during sleep. For the patient who needs to sleep in one particular side, user can calibrate the
+                mat according to that, and if the user moves aside from that particular side, alarm will go on so that user can move to his desired position again.</p>
 
               <br>
 
@@ -626,35 +621,35 @@
               <h4>Tools : Data Flow Diagram, Class Diagram</h4>
 
               <p>A system design has been proposed for the information of doctors' availability at any time, doctors' automatic attendance system, ensuring doctors' availability
-                in work time by automated monitoring system, information for current available medicine, services from the hospital.</p>
+                in work time by automated monitoring system, information for current available medicines, services from the hospital.</p>
 
               <br><br>
 
             <h2>Independent Projects : </h2>
 
-              <h3>Rapid Roll Android</h3>
+              <h3>Rapid Roll(Android)</h3>
 
               <h4>Tools : Android Studio, Java, Accelerometer, Canvas</h4>
 
-              <p>This is an android rapid roll game. User can play this game using android device accelerometer, see high scores and change theme of
-                gaming screen. The speed of the game increases over times. Game will over if user dies three times.
+              <p>This is an android rapid roll game. User can play this game using android device accelerometer, see high scores and change theme for
+                game screen. The speed of the game increases as time passes by. Game will be over if an user dies three times and user can restart the game again.
               </p>
 
-              <h4> <a href = "https://github.com/aminul7506/Rapid-Roll" target="_blank" rel="noopener">Github Code</a></h4>
+              <h4> <a href = "https://github.com/aminul7506/Rapid-Roll" target="_blank" rel="noopener">Code</a></h4>
 
-              <h4><a href = "https://www.amazon.com/Sojal-Rapid-Roll/dp/B01M9HQHPD/ref=sr_1_4?dchild=1&qid=16027
-            65618&refinements=p_4%3ASojal&s=mobile-apps&sr=1-4" target="_blank" rel="noopener">Rapid Roll</a> on Amazon App Store</h4>
+<!--            <h4><a href = "https://www.amazon.com/Sojal-Rapid-Roll/dp/B01M9HQHPD/ref=sr_1_4?dchild=1&qid=16027-->
+<!--            65618&refinements=p_4%3ASojal&s=mobile-apps&sr=1-4" target="_blank" rel="noopener">Rapid Roll</a> on Amazon App Store</h4>-->
 
             <br>
 
 
-              <h3>Rapid Roll Desktop</h3>
+              <h3>Rapid Roll(Desktop)</h3>
 
               <h4>Tools : iGraphics, C</h4>
 
-              <p>This is a rapid roll game using iGraphics. User can play and see high scores.</p>
+              <p>This is a rapid roll game using iGraphics for desktop. User can play game and see leaderboard.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Rapid-Roll-Desktop-" target="_blank" rel="noopener">Github Code</a></h4>
+              <h4> <a href = "https://github.com/aminul7506/Rapid-Roll-Desktop-" target="_blank" rel="noopener">Code</a></h4>
 
               <br>
 
@@ -662,13 +657,13 @@
 
               <h4>Tools : Unity 3D, C#</h4>
 
-              <p>This is a car racing game using unity 3D game engine. This project has the android, iOS and desktop version.</p>
+              <p>This is a small car racing game using unity 3D game engine. This project has the android, iOS and desktop version.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Car-Racing-Game" target="_blank" rel="noopener">Github Code</a></h4>
+              <h4> <a href = "https://github.com/aminul7506/Car-Racing-Game" target="_blank" rel="noopener">Code</a></h4>
 
               <br>
 
-              <h3>Android Notebook</h3>
+              <h3>Notebook</h3>
 
               <h4>Tools : Android Studio, Java</h4>
 
@@ -676,21 +671,21 @@
 
               <h4> <a href = "https://github.com/aminul7506/Notebook" target="_blank" rel="noopener">Github Code</a></h4>
 
-              <h4><a href = "https://www.amazon.com/Sojal-Notebook/dp/B01DK5LA28/ref=sr_1_
-            1?dchild=1&qid=1602780174&refinements=p_4%3ASojal&s=mobile-apps&sr=1-1" target="_blank" rel="noopener">Notebook</a> on Amazon App Store</h4>
+<!--              <h4><a href = "https://www.amazon.com/Sojal-Notebook/dp/B01DK5LA28/ref=sr_1_-->
+<!--            1?dchild=1&qid=1602780174&refinements=p_4%3ASojal&s=mobile-apps&sr=1-1" target="_blank" rel="noopener">Notebook</a> on Amazon App Store</h4>-->
 
               <br>
 
-              <h3>Android Speedometer and Location</h3>
+              <h3>Speedometer and Location</h3>
 
               <h4>Tools : Android Studio, Java, Google Map Api</h4>
 
-              <p>This is an android application from which user can see one's current velocity , current location in map and location details.</p>
+              <p>This is an android application from which user can see one's current velocity, current location in map and location details.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Speedometer" target="_blank" rel="noopener">Github Code</a></h4>
+              <h4> <a href = "https://github.com/aminul7506/Speedometer" target="_blank" rel="noopener">Code</a></h4>
 
-              <h4><a href = "https://www.amazon.com/Sojal-Speedometer-Location/dp/B01EIJP21K/ref=sr_1_3?dchild=1&qid=
-            1602765618&refinements=p_4%3ASojal&s=mobile-apps&sr=1-3" target="_blank" rel="noopener">Speedometer and Location</a> on Amazon App Store</h4>
+<!--              <h4><a href = "https://www.amazon.com/Sojal-Speedometer-Location/dp/B01EIJP21K/ref=sr_1_3?dchild=1&qid=-->
+<!--            1602765618&refinements=p_4%3ASojal&s=mobile-apps&sr=1-3" target="_blank" rel="noopener">Speedometer and Location</a> on Amazon App Store</h4>-->
 
               <br>
 
@@ -699,34 +694,34 @@
 
               <h4>Tools : Android Studio, Java</h4>
 
-              <p>This is an android application where there are some questions. You have to answer these questions and
-                based on your answers your mental age will be simulated.</p>
+              <p>This is an android application on which there are some questions. An user needs to answer these questions and
+                based on his answers, his mental age will be simulated.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Mental-Age-V-1" target="_blank" rel="noopener">Github Code</a></span></h4>
+              <h4> <a href = "https://github.com/aminul7506/Mental-Age-V-1" target="_blank" rel="noopener">Code</a></h4>
 
-              <h4><a href = "https://www.amazon.com/Sojal-Mental-Age/dp/B01CSTBLJO/ref=sr_1_2?dchild=1&qid=1602765618&refinements=p_
-            4%3ASojal&s=mobile-apps&sr=1-2" target="_blank" rel="noopener">Mental Age</a> on Amazon App Store</h4>
+<!--              <h4><a href = "https://www.amazon.com/Sojal-Mental-Age/dp/B01CSTBLJO/ref=sr_1_2?dchild=1&qid=1602765618&refinements=p_-->
+<!--            4%3ASojal&s=mobile-apps&sr=1-2" target="_blank" rel="noopener">Mental Age</a> on Amazon App Store</h4>-->
 
               <br>
 
-              <h3>Android Flashlight</h3>
+              <h3>Flashlight</h3>
 
               <h4>Tools : Android Studio, Java</h4>
 
-              <p>This is an android flashlight application. You can use this as a torch light from your android device.</p>
+              <p>This is an android flashlight application. Users can use this as a torch light from android device.</p>
 
               <h4> <a href = "https://github.com/aminul7506/Flashlight" target="_blank" rel="noopener">Github Code</a></span></h4>
 
-              <h4><a href = "https://www.amazon.com/Sojal-Flashlight/dp/B01DK9GVLE/ref=sr_1_5?dchild=1&qid=1602765618&refinements=
-            p_4%3ASojal&s=mobile-apps&sr=1-5" target="_blank" rel="noopener">Flashlight</a> on Amazon App Store</h4>
+<!--              <h4><a href = "https://www.amazon.com/Sojal-Flashlight/dp/B01DK9GVLE/ref=sr_1_5?dchild=1&qid=1602765618&refinements=-->
+<!--            p_4%3ASojal&s=mobile-apps&sr=1-5" target="_blank" rel="noopener">Flashlight</a> on Amazon App Store</h4>-->
 
               <br>
 
-              <h3>Android Calculator</h3>
+              <h3>Calculator</h3>
 
               <h4>Tools : Android Studio, Java</h4>
 
-              <p>It is a simple calculator app than can perform basic operations.</p>
+              <p>It is a simple android calculator application than can perform basic mathematical operations.</p>
 
 
             <br>
