--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
 
               <p>This is an android notebook application. User can save, edit, delete one's writings in the notebook.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Notebook" target="_blank" rel="noopener">Github Code</a></h4>
+              <h4> <a href = "https://github.com/aminul7506/Notebook" target="_blank" rel="noopener">Code</a></h4>
 
 <!--              <h4><a href = "https://www.amazon.com/Sojal-Notebook/dp/B01DK5LA28/ref=sr_1_-->
 <!--            1?dchild=1&qid=1602780174&refinements=p_4%3ASojal&s=mobile-apps&sr=1-1" target="_blank" rel="noopener">Notebook</a> on Amazon App Store</h4>-->
@@ -710,7 +710,7 @@
 
               <p>This is an android flashlight application. Users can use this as a torch light from android device.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Flashlight" target="_blank" rel="noopener">Github Code</a></span></h4>
+              <h4> <a href = "https://github.com/aminul7506/Flashlight" target="_blank" rel="noopener">Code</a></h4>
 
 <!--              <h4><a href = "https://www.amazon.com/Sojal-Flashlight/dp/B01DK9GVLE/ref=sr_1_5?dchild=1&qid=1602765618&refinements=-->
 <!--            p_4%3ASojal&s=mobile-apps&sr=1-5" target="_blank" rel="noopener">Flashlight</a> on Amazon App Store</h4>-->
