--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@
             <p>Bangla article summarizer outputs an extractive Bangla summary of a given Bangla news article.</p>
 
             <ul>
-              <li>worked for developing automated Bangla article summarizer using two methods(TF, TFIDF)
-                and mentioned tools and evaluated performance on news articles for each method</li>
+              <li>worked on finding methodologies to construct an extractive Bangla article summarizer and developing Bangla article summarizer using
+                two methods(TF, TF-IDF) and mentioned tools and also evaluated performance on different news articles for each method</li>
             </ul>
 
             <strong>Tools & Languages I have used : </strong>Python, NLTK, K-means Clustering Algorithm, our prepared Bangla Words Dataset,
@@ -390,7 +390,7 @@
               with in-App book store. It is currently the most popular eBook reader in Bangladesh which has around 500k users.</p>
 
             <ul>
-              <li>worked for developing secured eBook reader with in-App book store, short story reader
+              <li>worked on developing secured eBook reader with in-App book store, short story reader
               and editor, many more functionalities and working as one of a programming advisors for
                 the continuous development</li>
               <li>made research on how books will be encrypted in server and decrypted in a specific user’s
@@ -409,7 +409,7 @@
             <p>Boitoi(iOS) is a secured iOS eBook reader with in-App book store.</p>
 
             <ul>
-              <li>Worked for the whole development of this project from its initial development to successful launching and
+              <li>Worked on the whole development of this project from its initial development to successful launching and
                 developed all the functionalities of the app</li>
               <li>made research on how books will be encrypted in server and decrypted in a specific user’s
                   iOS device using iOS keychain</li>
@@ -445,7 +445,7 @@
                   used to login to any Ridmik application using a single Ridmik account.</p>
 
             <ul>
-              <li>worked for developing inter-app authentication and login screens for both android and iOS application</li>
+              <li>worked on developing inter-app authentication and login screens for both android and iOS application</li>
             </ul>
 
             <strong>Tools & Languages I have used : </strong>Android Studio, Java, XML, Xcode, Swift, StoryBoard, iOS Keychain
