--- a/index.html
+++ b/index.html
@@ -837,10 +837,10 @@
       </li>
 
 
-      <li>
-        <i class="fa-li fas fa-phone fa-2x" aria-hidden="true"></i>
-        <span id="person-telephone">+8801750903875</span>
-      </li>
+<!--      <li>-->
+<!--        <i class="fa-li fas fa-phone fa-2x" aria-hidden="true"></i>-->
+<!--        <span id="person-telephone">+8801750903875</span>-->
+<!--      </li>-->
 
 
         <li>
