--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
               <li>working in the continuous development of the app specially in the messaging part</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong>XMPP, Signal Protocol, ejabberd(XMPP server), AES encryption, Android Studio, Java,
+            <strong>Tools & Languages I have used : </strong>XMPP, Signal Protocol, ejabberd(XMPP server), AES encryption and decryption, Android Studio, Java,
             Kotlin, SQL
 
             <h4><a href = "https://play.google.com/store/apps/details?id=ridmik.one" target="_blank" rel="noopener">Ridmik+</a> on Google Play</h4>
@@ -465,7 +465,7 @@
 
             <ul>
               <li>worked in developing backend, rest api and frontend of the application</li>
-              <li>worked in developing an admin panel for uploading crime data on which AIST model will be trained</li>
+              <li>worked in developing an admin panel for uploading crime data in server predicted by AIST</li>
             </ul>
 
             <strong>Tools & Languages I have used : </strong> Django, Python, SQLite, HTML, CSS, Javascript, jQuery, REST API, tkinter
