fix work experience

--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@
                   messaging and social platform application for android</p>
 
             <ul>
-              <li>worked in developing XMPP based one to one and group messaging,
-                end-to-end encrypted messaging in client side and different security issues to protect user data in android device</li>
+              <li>developed XMPP based one to one and group messaging, end-to-end encrypted
+                  messaging in client side and different security issues to protect user app data in android device</li>
               <li>working in the continuous development of the app specially in the messaging part</li>
             </ul>
 
@@ -375,8 +375,8 @@
             <p>Bangla article summarizer outputs an extractive Bangla summary of a given Bangla news article.</p>
 
             <ul>
-              <li>worked on finding methodologies to construct an extractive Bangla article summarizer and developing Bangla article summarizer using
-                two methods(TF, TF-IDF) and mentioned tools and also evaluated performance on different news articles for each method</li>
+              <li>contributed for finding methodologies to construct an extractive Bangla article summarizer and developed Bangla article summarizer using two methods(TF, TF-IDF)
+          and mentioned tools and also evaluated performance on different news articles for each method</li>
             </ul>
 
             <strong>Tools & Languages I have used : </strong>Python, NLTK, K-means Clustering Algorithm, our prepared Bangla Words Dataset,
@@ -390,11 +390,10 @@
               with in-App book store. It is currently the most popular eBook reader in Bangladesh which has around 500k users.</p>
 
             <ul>
-              <li>worked on developing secured eBook reader with in-App book store, short story reader
-              and editor, many more functionalities and working as one of a programming advisors for
-                the continuous development</li>
-              <li>made research on how books will be encrypted in server and decrypted in a specific user’s
-                  android device using user device unique info</li>
+              <li>developed secured eBook reader with in-App book store, short story reader and editor, many more functionalities
+                and working as one of a programming advisors for the continuous development</li>
+              <li>contributed to research on how books will be encrypted in server and decrypted in a specific user’s android
+                device using user device unique info</li>
             </ul>
 
             <strong>Tools & Languages I have used : </strong>Android Studio, Java, Kotlin, Java Native Interface, C, SQL, JavaScript, HTML, CSS, XML,
@@ -409,10 +408,8 @@
             <p>Boitoi(iOS) is a secured iOS eBook reader with in-App book store.</p>
 
             <ul>
-              <li>Worked on the whole development of this project from its initial development to successful launching and
-                developed all the functionalities of the app</li>
-              <li>made research on how books will be encrypted in server and decrypted in a specific user’s
-                  iOS device using iOS keychain</li>
+              <li>worked for the whole development of secured eBook reader with in-app book store</li>
+              <li>contributed to research on how books will be encrypted in server and decrypted in a specific user’s iOS device using iOS keychain</li>
             </ul>
 
             <strong>Tools & Languages I have used : </strong>Xcode, Swift, Objective-C, C++, JavaScript, HTML, CSS, GRDB,
@@ -425,11 +422,11 @@
 
             <h4>Ridmik Keyboard</h4>
 
-            <p>Ridmik Keyboard is the most popular android keyboard in Bangladesh
-                  with Bangla phonetic keyboard, English and Arabic layout which has around 50 million users.</p>
+            <p> Ridmik Keyboard is a popular android keyboard in Bangladesh with Bangla phonetic keyboard, English and Arabic layout
+              which has around 50 million users.</p>
 
             <ul>
-              <li>worked on fixing some bugs, design changes, and implementing some new features</li>
+              <li>fixed some bugs, worked on design changes, and implemented some new features</li>
             </ul>
 
             <strong>Tools & Languages I have used : </strong>Android Studio, Java, Kotlin, C, Java Native Interface
@@ -445,18 +442,18 @@
                   used to login to any Ridmik application using a single Ridmik account.</p>
 
             <ul>
-              <li>worked on developing inter-app authentication and login screens for both android and iOS application</li>
+              <li>developed inter-app authentication and login screens for both android and iOS</li>
             </ul>
 
             <strong>Tools & Languages I have used : </strong>Android Studio, Java, XML, Xcode, Swift, StoryBoard, iOS Keychain
 
             <br><br><br>
             <h3>Programmer</h3>
-            <h4>AIST Demo Project, Department of Computer Science and Engineering, BUET, Dhaka, Bangladesh<br> May 1, 2021 - July 31, 2021</h4>
+            <h4>AIST Project, Department of Computer Science and Engineering, BUET, Dhaka, Bangladesh<br> May 1, 2021 - July 31, 2021</h4>
 
-            <h4>AIST Demo Project</h4>
+            <h4>AIST Project</h4>
 
-            <p>AIST Demo project is a web based application for demonstrating real life application of
+            <p>AIST project is a web based application for demonstrating real life application of
               <a href = "https://arxiv.org/abs/2012.08713" target="_blank" rel="noopener">AIST</a>
               (An Interpretable Attention-based Deep Learning Model for Crime Prediction) paper(preprint). The website shows predicted crimes info and some
               indexes of crime dynamics predicted by AIST model in a given location. Besides, predicted and actual crime data analysis is shown based on different
@@ -464,8 +461,7 @@
             </p>
 
             <ul>
-              <li>worked in developing backend, rest api and frontend of the application</li>
-              <li>worked in developing an admin panel for uploading crime data in server predicted by AIST</li>
+              <li>developed backend, REST API, frontend and an admin panel for uploading crime data in server predicted by AIST model</li>
             </ul>
 
             <strong>Tools & Languages I have used : </strong> Django, Python, SQLite, HTML, CSS, Javascript, jQuery, REST API, tkinter
@@ -502,29 +498,9 @@
 
               <h4>Tools : Android Studio, Java, Firebase, Google Map API, SQLite, Push Notification</h4>
 
-              <p>It is an android application which is based on the idea of smart city and human security. There are
-                two sides in the application: one is admin or police side and another one is user side.
-
-              <h4>User side functionalities</h4>
-              <ul>
-                <li>User can report a crime from the app to one's nearby police station</li>
-                <li>User can see the verified crimes in an area</li>
-                <li>User can see the nearby police station based on his current location and can call or message to the police station
-                  immediately in case of an emergency or danger</li>
-                <li>If user is now in a crime or danger area, user will get a notification</li>
-                <li>User can see crime statistics and verified crimes in one's area</li>
-                <li>User can see nearby friends' location in map and can call or message them</li>
-              </ul>
-
-
-              <h4>Admin or police side functionalities</h4>
-              <ul>
-                <li>Police can log into his/her station.</li>
-                <li>Police can see the reported crimes in his area</li>
-                <li>Police can call or send message to a user who has reported a crime and verify the crime</li>
-                <li>Police can see crimes statistics in his/her area</li>
-                <li>Police can set a area as crime or danger prone</li>
-              </ul>
+              <p>Users can report for crimes in police station, connect with nearby police station or friends in emergency,
+                get notification alert, see verified crimes in an area and police can see reported crimes, connect with victims and
+                verify crimes, make an area as danger prone.
 
               <h4><a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Code</a></h4>
 
@@ -534,8 +510,7 @@
 
               <h4>Tools : Python, Keras, Tensorflow, LSTM(Long Short Term Memory), one year share market data for training</h4>
 
-              <p>It can predict the starting price for next day share market from a model which is trained using
-                      LSTM on multiple attributes of share market data.</p>
+              <p>A model is trained using LSTM on multiple attributes of share market data which can predict the starting price for next day share market.</p>
 
               <h4> <a href = "https://github.com/aminul7506/Multivariate-Stock-Price-Prediction" target="_blank" rel="noopener">Code</a></h4>
 
@@ -546,9 +521,8 @@
               <h4>Tools : Java, JSP Servlet, Oracle, HTML, CSS</h4>
 
               <p>
-                It is a web application from which students can give online exams on both MCQ
-                and descriptive type questions. There is an admin panel from where teachers can upload questions.
-                Teachers can evaluate answer scripts on descriptive type questions and MCQ type questions will be evaluated automatically.</p>
+                Students can give exams and see marks on both MCQ and descriptive questions, teachers can upload questions from
+                admin panel and can check descriptive answers.</p>
 
               <h4> <a href = "https://github.com/aminul7506/Online-Examination-Web-Based-" target="_blank" rel="noopener">Code</a></h4>
 
