fix work experience

--- a/index.html
+++ b/index.html
@@ -438,8 +438,7 @@
 
             <h4>Ridmik Account Kit</h4>
 
-            <p>Ridmik Account Kit is a library for android and iOS which is
-                  used to login to any Ridmik application using a single Ridmik account.</p>
+            <p>User can login to any Ridmik app in andorid or iOS devices using a single Ridmik account through this library.</p>
 
             <ul>
               <li>developed inter-app authentication and login screens for both android and iOS</li>
@@ -516,7 +515,7 @@
 
               <br>
 
-              <h3>Online Examination Web</h3>
+              <h3>Online Examination(Web)</h3>
 
               <h4>Tools : Java, JSP Servlet, Oracle, HTML, CSS</h4>
 
@@ -529,24 +528,23 @@
               <br>
 
 
-              <h3>Online Examination Desktop</h3>
+              <h3>Online Examination(Desktop)</h3>
 
               <h4>Tools : Java, JavaFx, Socket Programming, File System</h4>
 
-              <p>This is an online examination project using java socket programming and JavaFx framework. Teachers can upload question paper from admin panel.
-                Students can give MCQ exam on questions uploaded by teachers and can see their marks and all previous history on every subject.
+              <p>Teachers can upload question paper from admin panel.
+                and students can give MCQ exam and can see their marks and all previous marks history on every subject.
               </p>
 
               <h4> <a href = "https://github.com/aminul7506/Online-Examination-Desktop-" target="_blank" rel="noopener">Code</a></h4>
 
               <br>
 
-              <h3>Air Fighter Desktop</h3>
+              <h3>Air Fighter(Desktop)</h3>
 
               <h4>Tools : iGraphics, C</h4>
 
-              <p>It is a funny air fighter game. There are multiple levels in this game and also leaderboard from where
-                user can see high scores of his own and others.</p>
+              <p>Users can play this funny game in desktop and can see leaderboards.</p>
 
               <h4> <a href = "https://github.com/aminul7506/Air-Fighter" target="_blank" rel="noopener">Code</a></h4>
 
@@ -556,7 +554,7 @@
 
               <h4>Tools : Flex, Bison, YACC (Yet Another Compiler-Compiler)</h4>
 
-              <p>It is a small scale C compiler project. It has four steps : symbol table, lexical analysis, parsing and code generation.</p>
+              <p>Small scale C Compiler project which has four steps : symbol table, lexical analysis, parsing and code generation.</p>
 
               <h4> <a href = "https://github.com/aminul7506/Small-C-Compiler" target="_blank" rel="noopener">Code</a></h4>
 
@@ -566,17 +564,9 @@
 
               <h4>Tools : OpenGL</h4>
 
-              <p>It is a computer graphics course assignment on which I have generated a realistic image using OpenGL.</p>
+              <p>A computer graphics course assignment on which I have generated a realistic image of some common shape using OpenGL.</p>
 
               <h4> <a href = "https://github.com/aminul7506/RayTracing" target="_blank" rel="noopener">Code</a></h4>
-
-              <br>
-
-              <h3>Quad Copter Controller from Android Device</h3>
-
-              <h4>Tools : Android Studio, Bluetooth module, Java</h4>
-
-              <p>It is a quad copter controller using bluetooth module that can control the movement of a small quad copter using android device.</p>
 
               <br>
 
@@ -584,10 +574,9 @@
 
               <h4>Tools : Arduino, Piezoelectric sensor, C</h4>
 
-              <p>It is a hardware project which can be calibrated according to user choice. User can set a time for alarm, and until an user goes out of the mat on the time of alarm,
+              <p>Smart sleeping mat is a hardware project where a user can set a time for alarm, and until a user goes out of the mat on the time of alarm,
                 alarm won't stop. This will be helpful for those who accidentally close alarm during sleep. For the patient who needs to sleep in one particular side, user can calibrate the
                 mat according to that, and if the user moves aside from that particular side, alarm will go on so that user can move to his desired position again.</p>
-
               <br>
 
               <h3>An information system on ‘Automation of Govt. Hospital Management’ </h3>
@@ -606,7 +595,7 @@
               <h4>Tools : Android Studio, Java, Accelerometer, Canvas</h4>
 
               <p>This is an android rapid roll game. User can play this game using android device accelerometer, see high scores and change theme for
-                game screen. The speed of the game increases as time passes by. Game will be over if an user dies three times and user can restart the game again.
+                game screen. The speed of the game increases as time passes by. Game will be over if a user dies three times and user can restart the game again.
               </p>
 
               <h4> <a href = "https://github.com/aminul7506/Rapid-Roll" target="_blank" rel="noopener">Code</a></h4>
@@ -668,7 +657,7 @@
 
               <h4>Tools : Android Studio, Java</h4>
 
-              <p>This is an android application on which there are some questions. An user needs to answer these questions and
+              <p>This is an android application on which there are some questions. A user needs to answer these questions and
                 based on his answers, his mental age will be simulated.</p>
 
               <h4> <a href = "https://github.com/aminul7506/Mental-Age-V-1" target="_blank" rel="noopener">Code</a></h4>
